--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "job-seeker",
-  "version": "0.1",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "run": "node index.js"
   },
   "author": "MushrChun",
-  "license": "MIT",
+  "license": "ISC",
   "dependencies": {
     "cheerio": "^0.22.0",
     "phantom": "^4.0.0",
+    "phantom-pool": "^1.2.0",
     "request": "^2.79.0",
     "url-parse": "^1.1.8"
   },
