parse info rely on data from  requestjs mongodb store

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "MushrChun",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.1.5",
     "cheerio": "^0.22.0",
+    "mongodb": "^2.2.24",
     "phantom": "^4.0.0",
     "phantom-pool": "^1.2.0",
     "request": "^2.79.0",
